# granger_hub

./: .env.bak  .gitignore  001_results.json  001_test1.json  001_test1_rerun.json  001_test2.json  001_test3.json  001_testH.json  CLAUDE.md  CLEANUP_COMPLETE.md  COMPREHENSIVE_100_SCENARIOS_PLAN.md  COMPREHENSIVE_SCENARIO_SUMMARY.md  CREATIVE_MODULE_SCENARIOS_SUMMARY.md  FINAL_100_SCENARIOS_ACHIEVEMENT.md  FINAL_CREATIVE_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  LEVEL_0_SCENARIOS.md  LEVEL_0_TESTING_SUMMARY.md  PRACTICAL_SCENARIOS_IMPLEMENTED.md  PROJECT_ORGANIZATION_SUMMARY.md  PROJECT_STATUS.md  README.md  SCENARIOS_SUMMARY.md  TASK_102_SUMMARY.md  __init__.py  check_databases.py  conversations.db  demo_dynamic_communication.py  demo_module_system.py  final_task105_test.py  mcp.json  mcp_config.json  module_registry.json  pyproject.toml  reinstall.sh  rename_github.sh  rename_github_fix.sh  run_creative_module_scenarios.sh  run_rl_metrics_tests.sh  (+15 more)
data/: conversations.db  rl_experiences.db  test_negotiation.db  test_rl_experiences.db  test_rl_integration.db
docs/: DYNAMIC_INTERACTION_DISCOVERY_DESIGN.md  DYNAMIC_INTERACTION_DISCOVERY_IMPLEMENTATION.md  EXTERNAL_MODELS_GUIDE.md  FINAL_IMPLEMENTATION_SUMMARY.md  GRANGER_MCP_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ANALYSIS.md  INTEGRATION_SCENARIO_TEST_FRAMEWORK.md  INTEGRATION_SCENARIO_TEST_IMPLEMENTATION.md  PROJECTS.md  PROJECT_ANALYSIS_SUMMARY.md  RL_LEARNING_ARCHITECTURE.md  RL_OLLAMA_INTEGRATION.md  RL_QUICKSTART.md  SELF_IMPROVEMENT_SYSTEM.md  TASK_102_IMPLEMENTATION_REPORT.md  TESTING_CHANGES.md  conversation_api.md  conversation_troubleshooting.md
reports/: 001_combined.json  001_protocol_adapter_assessment.md  001_results.json  001_validation.md  002_results.json  002_validation.md  003_results.json  003_validation.md  004_adapter_results.json  004_binary_results.json  004_event_results.json  004_results.json  004_validation.md  005_discovery.json  005_discovery_validation.md  005_hardware.json  005_hardware_validation.md  005_results.json  005_single_test.json  005_validation.json  005_validation.md  005_validation_validation.md  006_results.json  006_results_fixed.json  006_validation.html  006_validation_fixed.html  007_results.json  007_results_fixed.json  007_validation.html  007_validation_fixed.html  007_validation_fixed2.html  008_results.json  008_results_complete.json  008_results_final.json  008_results_mock.json  008_results_simple.json  008_validation.html  008_validation_complete.html
scenarios/: cwe_security_analysis_scenario.py  level_3_youtube_research_integration_test.py  level_3_youtube_research_integration_test.py.mock_backup  level_4_chat_ui_research_test.py  research_youtube_to_knowledge_graph.py  satellite_firmware_vulnerability_scenario.py
scripts/: check_databases.py  check_external_deps.py  combine_test_reports.py  generate_final_test_report.py  generate_improvements.py  generate_test_report.py  migrate_scenarios.py  register_all_modules.py  run_all_scenarios.sh  run_discovery.py  run_improvement_demo.py  setup_self_improvement_cron.sh  test_self_improvement.py  validate_conversation_tests.py  validate_discovery_tests.py  validate_hardware_tests.py  validate_integration_tests.py
tests/: README.md  __init__.py  conftest.py  test_arango_conversations.py  test_arango_conversations_mock.py  test_claude_communication.py  test_communicator_conversations.py  test_conversation_context.py  test_conversation_integration.py  test_conversation_integration_mock.py  test_conversation_integration_simple.py  test_conversation_manager.py  test_conversation_message.py  test_conversation_protocol.py  test_discovery_system.py  test_dynamic_communication.py  test_granger_integration.py  test_integration.py  test_integration_validation.py  test_schema_negotiation.py  test_self_improvement_system.py  test_service_discovery.py
utils/: scenario_base.py
(+353 files in other folders)
